--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.13.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
