--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,6 +24,6 @@
     },
     "types": ["vitest/globals"]
   },
-  "include": ["src"],
+  "include": ["src", "./vitest.setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
