Add charity address array, fix charity balance, few renames

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,14 @@
 {
   "name": "good-will-gwei-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "author": "Gabor Lupak",
   "license": "MIT",
+   "scripts": {
+    "test": "npx hardhat test",
+    "test-gas": "REPORT_GAS=true npx hardhat test",
+    "compile": "npx hardhat compile",
+    "deploy-sepolia": "npx hardhat run scripts/deploy.ts --network sepolia"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
@@ -16,7 +22,7 @@
     "@types/node": ">=16.0.0",
     "chai": "^4.2.0",
     "dotenv": "^16.4.1",
-    "ethers": "^6.4.0",
+    "ethers": "^6.10.0",
     "hardhat": "^2.19.5",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
