--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-2": "biome check .",
     "preview": "vite preview",
     "test": "vitest"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.7",
+    "@tanstack/react-query": "^5.20.5",
     "alchemy-sdk": "^3.1.2",
     "antd": "^5.13.3",
     "ethers": "^5.7.2",
@@ -23,7 +25,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "viem": "2.x",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
