--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "npx hardhat test",
     "test-gas": "REPORT_GAS=true npx hardhat test",
     "compile": "npx hardhat compile",
-    "deploy-sepolia": "npx hardhat run scripts/deploy.ts --network sepolia"
+    "deploy-sepolia": "npx hardhat run scripts/deploy.ts --network sepolia",
+    "verify-sepolia": "npx hardhat verify --network sepolia"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
