--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
+    "thirdweb": "^5.25.1",
     "viem": "2.x",
     "wagmi": "^2.5.7"
   },
